# BLA-Mem

./: README.md  pyproject.toml  requirements.txt
docs/: bla.md  idea.md  out.txt  tf.md
experiments/: mvp.py
src/: data.py  main.py
src/bla_mem/: __init__.py  __main__.py  cli.py  model.py  scan.py  signature.py  tasks.py  tensor_algebra.py  trainer.py  utils.py
src/bla_mem/models/: base.py  cumulant.py  factory.py  jump.py  magnus.py  sheaf.py  transformer.py  ultrametric.py
src/models/: baselines.py  gssm.py
