[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bla-mem"
version = "0.1.0"
description = "Toy baselines for long-sequence memory models"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.1",
  "numpy>=1.26",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
